2007-05-04  Sebastian Marsching  <sebastian.marsching@1und1.de>

	* src/de/schlund/pfixcore/editor2/core/spring/internal/ProjectImpl.java: 
	* src/de/schlund/pfixcore/editor2/core/spring/PageFactoryService.java: 
	* src/de/schlund/pfixcore/editor2/core/spring/PageFactoryServiceImpl.java: 
	* src/de/schlund/pfixcore/editor2/core/spring/TargetFactoryServiceImpl.java: 
	* src/de/schlund/pfixcore/editor2/frontend/resources/PagesResourceImpl.java: 
	* projects/core/editor2/txt/pages/main_pages.xml: 
	Fixed editor problems that occured when a page was not listed in navigation or
	a page was listed in navigation but no target existed.

2007-04-23  Sebastian Marsching  <sebastian.marsching@1und1.de>

	* projects/core/build/create_ajpconf.xsl: 
	* projects/core/build/create_apacheconf.xsl: 
	* projects/core/build/create_jkconf.xsl: 
	* skel/build-skel.xml: 
	Added support for mod_proxy_ajp

2007-04-23  Sebastian Marsching  <sebastian.marsching@1und1.de>

	* src/de/schlund/pfixxml/config/BuildTimePropTask.java (execute): 
	Make ant properties available using "__antprop_" prefix.

2007-04-20  Martin Leidig  <mleidig@schlund.de>

	* src/de/schlund/pfixcore/webservice/generate/WebServiceTask.java: Check
	configured protocol type and only generate stubs for SOAP enabled services.

2007-04-19  Martin Leidig  <mleidig@schlund.de>

	Added qooxdoo-RPC-compatible ServiceProcessor and implemented
	simple import-mechanism for webservice configuration (similar
	to XSLT import mechanism).

	Added:

	* src/de/schlund/pfixcore/example/webservices/BeanSubImpl.java
	* src/de/schlund/pfixcore/example/webservices/BeanItf.java
	* src/de/schlund/pfixcore/example/webservices/BeanImpl.java
	* src/de/schlund/pfixcore/webservice/jsonqx
	* src/de/schlund/pfixcore/webservice/jsonqx/JSONQXProcessor.java
	* src/de/schlund/pfixcore/webservice/jsonqx/CalendarSerializer.java
	* projects/webservice/conf/webservice-import.xml
	* tests/junit/de/schlund/pfixcore/webservice/config